# cookiecutter-awesome-poetry

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .isort.cfg  .mailmap  LICENSE  Makefile  README.md  pyproject.toml  shell.nix
{{cookiecutter.project_slug}}/tests/: test_module.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  py.typed
